--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "doh-client",
   "version": "1.0.0",
   "description": "",
+  "bin": {
+    "doh": "./doh.js"
+  },
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
