--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "doh-client",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "bin": {
-    "doh": "./doh.js"
+    "doh": "./doh.js",
+    "doh-client": "./doh.js"
   },
-  "main": "index.js",
+  "main": "doh.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
